1999-03-05  Eli Zaretskii

	* src/grep.c (main): Print the name of the default matcher instead
	of just "grep".                                                        

1999-02-06 Alain Magloire

	* tests/*.awk : Linux users are seeing "Broken Pipe" on make check.
	The problem is that grep does not drain its stdin, thus the previous
	process in the pipeline receives a SIGPIPE.  Other shells are silent
	about this.  There is actually no failure, since the broken pipe is
	expected.  You can work around it by changing the pipeline, so that
	the input is drained, like this:
	status=`echo 'check' | { ${GREP} -E -e pattern >/dev/null 2>&1;
	echo $?; cat >/dev/null; }`; if test $status -ne $errnu then ... fi
	Excerpt from email exchange with Andreas Schwab.                              

1999-02-23 Alain Magloire

	* src/grep.c : Restrict the use of -E, -F, -G
	to only grep driver, Posix behaviour. {f,e}grep
	the matcher is already set. This change may brake
	scripts, warn in NEWS.

	* doc/grep.{1,texi} : -C takes arguments, upgrade manual.

	* beta 2.3a

1999-02-23 Alain Magloire

	* configure.in : Change the configure VC test from
	'test x$ac_cv_prog_CC = xcl;' to 'test x"$ac_cv_prog_CC" = xcl;'
	Email from Joshua R. Poulson.

1999-02-23 Paul Eggert

	Fix porting bug reported by Amakawa Shuhei for SunOS 4.1.4-JL.
	The btowc.c shipped with grep 2.3 is incorrect for Solaris
	2.5.1 and earlier, as it assumes UTF8, which these OSes do not
	support.  Solaris 7 supports btowc, so there's no need to ship
	a substitute for it.  The only questionable case is Solaris
	2.6, which lacks btowc but does support UTF8.  However, 2.6
	supports UTF8 but only as a demonstration (for an English
	locale!); Japanese Solaris 2.6 users typically use EUC, or
	sometimes shift-JIS, but they cannot use UTF8 since Japanese
	UTF8 is not supported.  Hence there's no point to having grep
	substitute a btowc that uses UTF8, as it is either redundant,