@@ -46,20 +46,20 @@
 0@a[bc]d@abd
 0@a\*c@a*c
 0@a\\b@a\b@TO CORRECT
-0@a\\\*b@a\*b
+0@a\\\*b@a\*b@SHELL TROUBLE
 0@a\bc@abc@TO CORRECT
-2@a\@EESCAPE
+2@a\@EESCAPE@SHELL TROUBLE
 0@a\\bc@a\bc@TO CORRECT
 0@a\[b@a[b
 2@a[b@EBRACK
 0@a$@a
 1@a$@a$
-1@a\$@a
-0@a\$@a$
+1@a\$@a@SHELL TROUBLE
+0@a\$@a$@SHELL TROUBLE
 1@a\\$@a
-1@a\\$@a$
-1@a\\$@a\$
-0@a\\$@a\
+1@a\\$@a$@SHELL TROUBLE
+1@a\\$@a\$@SHELL TROUBLE
+0@a\\$@a\@SHEL TROUBLE
 0@ab*c@abc
 0@ab+c@abc
 0@ab?c@abc
